tests/golden/gateway-fleet/metrics-keep-all.yaml
---
# Source: gateway-fleet/templates/class.yaml
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: EnvoyProxy
metadata:
  name: internal-config
  namespace: envoy-gateway-system
spec:
  mergeGateways: true
  provider:
    kubernetes:
      envoyDeployment:
        replicas: 2
      envoyPDB:
        minAvailable: 1
      envoyService:
        name: gateway-internal
        type: ClusterIP
    type: Kubernetes

---
# Source: gateway-fleet/templates/class.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: internal
spec:
  controllerName: gateway.envoyproxy.io/gatewayclass-controller
  parametersRef:
    group: gateway.envoyproxy.io
    kind: EnvoyProxy
    name: internal-config
    namespace: envoy-gateway-system

---
# Source: gateway-fleet/templates/podmonitor.yaml
apiVersion: monitoring.coreos.com/v1
kind: PodMonitor
metadata:
  name: envoy-proxy
  namespace: envoy-gateway-system
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: envoy
      app.kubernetes.io/component: proxy
      app.kubernetes.io/managed-by: envoy-gateway
  podMetricsEndpoints:
    - port: metrics
      path: /stats/prometheus
